# piclock

./: README.md  pyproject.toml
src/piclock/: main.py
tests/: pyscope.py  test_piclock.py  test_pitft.py
